--- a/VRChat/28/1153028.html
+++ b/VRChat/28/1153028.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "SVPDWdJJ148UM0ZU6T5KPAU9KN+ALoz7obP41hd0kf0="></script>
+    "4RmzsUQC7PXvrA8NSIgxkC0RbKrgY8DiWzUZiYhUKHQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"即売会の紙袋","description":"[3D小物]即売会の紙袋\n\nサンプルに従って画像を2枚張り付けるだけで簡単にあなただけの展示会風な紙袋が作れます。\n\n「コ〇ケ楽しかったよ！」\nそう言って戦利品片手にVRChatに凱旋するときに使うと良い感じです。\n「ああっ、コ〇ケ行きたかった…」\n祭りの後の高揚感をわずかでも味わいたい悲しみのアイテムとしても利用できそうですね。\n\n\n■同梱物(無料・有料で内容物は同じです)\ndojinevent_paperbag.fbx\n作成サンプル画像\npsd(テクスチャ編集用)","url":"https://booth.pm/ja/items/1153028","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/a9382ad0-0431-4829-85ba-4973233e956b/i/1153028/975d5155-d1c0-4581-9be6-38c19da3abca_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="SVPDWdJJ148UM0ZU6T5KPAU9KN+ALoz7obP41hd0kf0="></script>
+    nonce="4RmzsUQC7PXvrA8NSIgxkC0RbKrgY8DiWzUZiYhUKHQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -461,9 +461,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
