--- a/VRChat/21/1152921.html
+++ b/VRChat/21/1152921.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "1iBqX2ilDjgEOhHyKf7SXxa8dOPq/2MrlCx8H1s0w8Q="></script>
+    "hwGCwHEH4gs7/3er8NQaM5EyodxKGwlqT+CqJdfCsGQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け「ぽち袋」","description":"みんな大好きお年玉。\n貯金するから渡しなさいって親に言われて渡していたはず……あれは今いずこへ？\n\n\nこのぽち袋は主に個人がVRChatでアバターに装着したり、ワールドに置くことを想定しています。\n\nポリゴン数は48です。\n\nopenシェイプキーで封筒が開き、otoshidamaシェイプキーで中身が出てきます。\nＵＶ配列も同封しているのでテクスチャを変えれば中身をいじれます。\n\nデフォルトではいらすとや様の一万円札が入っています。\n\nユニティパッケージになっています。","url":"https://booth.pm/ja/items/1152921","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/9fbdc596-2bd2-4262-98df-0a0fa6cf30d9/i/1152921/720ac6a6-2a0b-483a-878a-eed712158aa3_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1iBqX2ilDjgEOhHyKf7SXxa8dOPq/2MrlCx8H1s0w8Q="></script>
+    nonce="hwGCwHEH4gs7/3er8NQaM5EyodxKGwlqT+CqJdfCsGQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -480,9 +480,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
