--- a/VRChat/39/1366839.html
+++ b/VRChat/39/1366839.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "YTzRyDyROnhwu4P0mlYpdNCmDR0PiI1u6GOvrK5J7KA="></script>
+    "AnSgnQd3hRJScN3aXu9A1COa9mFq+4gK56t75JISL9Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat向け]ウミウシアバター（oga式ドーリス）","description":"※VRCSDK3.0以前のSDKで作成していますのでSDK2を使うと良いです\n\n制作　oga\ntwitter @oga_pleconia\n\n※注意事項\n・リアル風味ではありますが厳密なことはしていませんので\n　本物志向の方は改変して使ってください\n・5000ポリ未満ですがマテリアルの調整はquest版非対応です。改変して使ってください\n・アバター椅子が入っていますが今後のゲーム更新で壊れたりするかも\n\n◆データ内容\nユニティパッケージ、fbxファイル、テクスチャ素材\n・まんまるしぇーだー（みに@Mini_9321_VRさん作）を使用。MMS2.0をリネームした物を同梱\n・AvatarDescriptorと椅子が不要であれば消して使ってください\n・ダイナミックボーンをインポートすると揺れます\n\n◆使い方\nunityプロジェクトにパッケージをインポートし、\nシーンファイルをヒエラルキーにドロップしてください。\n\n◆許可事項\n本データおよび本データの改変物を動画や画像、ゲームに使用することを許可、それらの商用も許可\nVR、UNITY関係以外でもOK。クレジットは不要です\n\n◆制限事項\n本データおよび本データの改変物を配布・販売することは禁止\n（vrchatのアバターペデスタルのようなローカルにダウンロード出来ない形であれば許可。）\n（ゲームに含めることはOK。データ自体を取り出せる配布がダメ）","url":"https://booth.pm/ja/items/1366839","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/58ea32ec-ba52-48e9-8014-360fbbd7a39a/i/1366839/939e769a-e48e-45e8-9a95-bd555744571f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YTzRyDyROnhwu4P0mlYpdNCmDR0PiI1u6GOvrK5J7KA="></script>
+    nonce="AnSgnQd3hRJScN3aXu9A1COa9mFq+4gK56t75JISL9Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -417,9 +417,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
