--- a/VRChat/23/1366423.html
+++ b/VRChat/23/1366423.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "7hfTZZkBPkSp6AkR/b6UBI/WNpMNDTQDcw22vDBr0ns="></script>
+    "9fnaF4JXQf9FSKtAhYh3BHx17uuq362C767kewLVx3Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料版あり】SCP財団 ドクターコスチューム1","description":"Vroid用ワンピースの衣装テクスチャです。（ワンピースのみのデータになります）\n\n↓テクスチャ使用モデル\nhttps://hub.vroid.com/characters/8082467663812125861/models/1457629642890869373\n\n支援版にはテクスチャ編集用のGIMPのxcfデータが入っています。GIMP 2.8以降で動作確認済み。\n無料版にはpngデータのみとなっています。\n\n＊利用規約\n・著作権は放棄しません\n・トラブル等に一切責任を負いません\n・データを編集して使用可能です。\n・商用利用可能（Twitterに一言かけてください)\n・VRChat内での着用は可能です。\n・使用の際に製作者の表記は任意です\n・連絡先：＠tesla_0123","url":"https://booth.pm/ja/items/1366423","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"200"},"image":"https://booth.pximg.net/c/620x620/d786e558-81aa-497f-a2f1-b4f4cbf7c53d/i/1366423/5e59cb4f-d272-49b6-8fc8-ee90c9cff76f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7hfTZZkBPkSp6AkR/b6UBI/WNpMNDTQDcw22vDBr0ns="></script>
+    nonce="9fnaF4JXQf9FSKtAhYh3BHx17uuq362C767kewLVx3Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -428,9 +428,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
