--- a/VRChat/57/1366257.html
+++ b/VRChat/57/1366257.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "JFMenySPdZ+dazS9lV2HdL1MQki83OVNPt70617gtjU="></script>
+    "zuPaWv8o70kvk/YaqX71KyORKF9TDslL/O09+nsm49I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル　つまようじ","description":"新鮮な木材から生まれた素材に、つまようじ職人が一本一本丁寧に溝を掘りました。匠の技が冴える逸品です…！\n\nというのは冗談ですが、VRC等での使用可能なつまようじです\n\n一本当たり△1700となっております\n内容物は\n・unitypackage\n・UV画像ファイル\n・blendファイル\nとなっています。\n\n画像４枚目のつまようじケースのおまけもありますが、本数×1700ポリゴンなので、使用時は各自どうにかして使用してください。\n\n","url":"https://booth.pm/ja/items/1366257","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e744eeac-3eef-408c-8011-89c5b4908b13/i/1366257/64107e76-a357-45f6-abcb-a2c6681e8fce_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JFMenySPdZ+dazS9lV2HdL1MQki83OVNPt70617gtjU="></script>
+    nonce="zuPaWv8o70kvk/YaqX71KyORKF9TDslL/O09+nsm49I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -494,9 +494,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
