--- a/VRChat/87/1364287.html
+++ b/VRChat/87/1364287.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "PRIbrtLezutkwjHoRkIv3KtCYukv3xdO0z5Hb5AG22Y="></script>
+    "Dvk1KlQ2mAJPFGvmOLrFhpMho5CgOzQIEi0UH4r3UlI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"インドの屋台で使われているナイフ","description":"※重要※\n本作品は初心者による制作・無料配布なので一切のサポートや更新はありません。ご了承ください。\n\n△628ポリゴン\n\nVRChat利用想定の3Dモデルです。\nインドの屋台で使われている細長いナイフを作ってみました。\nモデリング初心者が作成したのでクオリティは劣りますがご了承ください。\n\n▼内容物\n　FBX２種（色設定済・色設定無）\n　UV配置PNGテクスチャ１枚\n　テキスト１枚\n\n尚、商品画像に使用しているモデルは含まれておりません。\nわこーさんの悪魔っ子ミウちゃんをモデルとしてお借りしました。\nhttps://booth.pm/ja/items/1340085\n\n\n◆利用規約◆\n\nVRChatの利用想定\n\n・商用・個人・改変・ワールドご自由にお使いください。（改変はテクスチャ・ＦＢＸファイルどちらも）\n\n・無償での再配布可（有償での再配布不可）\n再配布する場合は当ショップを宣伝してくれると喜びます。\n\n・使用用途は自由ですが、他の人に迷惑のかからない範囲でご利用ください\n\n・初心者による制作・無料配布なので一切のサポートは致しませんのでご了承ください。\n\n\n\n","url":"https://booth.pm/ja/items/1364287","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e94afb69-0d10-4493-8402-671fdaa09d79/i/1364287/5cd3d4f0-4fcf-47a8-b648-974c7247333e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PRIbrtLezutkwjHoRkIv3KtCYukv3xdO0z5Hb5AG22Y="></script>
+    nonce="Dvk1KlQ2mAJPFGvmOLrFhpMho5CgOzQIEi0UH4r3UlI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -364,9 +364,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
