--- a/VRChat/71/1364171.html
+++ b/VRChat/71/1364171.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "M7LyHztFPVx3mS/H31RyS4AIn/iZaP1E0LKH5JBhBo8="></script>
+    "8Tcbts5Lt5YTIFVOR8S86SPSIKIeQsHQTHAyKhnYBvM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"パレオ","description":"【パレオ】\n\nVRChat向け小物\n水着のお供にどうぞ！\n\nポリゴン数：1,884\n\n【内容】\n\n1.パレオ配布用.UnityPackage\n\n2.パレオのUV配置.png\n\n3.パレオ.png（テクスチャ）\n\n4.パレオ.fbx(3Dモデルデータ)\n\n5.パレオ使用の利用規約 readme.txt\n\n【導入前の確認】\n\n1.本モデルはArktoon-Shaders-1.0.2.4を同梱しています。(https://packetbird.booth.pm/items/1027997)\nすでにインポートしている場合はインポート時にチェックを外すか、予め削除した状態でインポートしてください。\n2.Dynamic Bone使用を前提に作成しております。UnityPackageを読み込む前に、Dynamic Boneの読み込みをお願い致します。\n\n【注意事項】\n\n1.このファイルを使用して発生したいかなるトラブルにも責任を負いかねます\n2.過度なアダルト表現、グロテスクな表現等での使用は禁止致します。\n3.政治的利用、宗教的利用、誹謗中傷目的の作品への使用は禁止します。\n4.本モデル、改造モデルをゲーム、アニメーション、アプリに使用すること、またそれを用いた収益化活動での使用を許可致します。\n5.ただし、本製品の作者を偽ること、本製品の改造の有無に関わらず再配布および販売は禁止致します。\n6.良識の範囲でのご使用をお願い致します。\n7.予告なく規約変更、配布停止、使用禁止にする事があります。\n\n制作者.ゆずグラフ\n何か不具合等が御座いましたら、下記のURLよりご指摘をお願い致します。\nhttps://twitter.com/yuzugraph　\n\n\n2019.05.11　販売開始\n","url":"https://booth.pm/ja/items/1364171","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/1ed4c1db-b9a3-45a8-9a20-fc0109c447fe/i/1364171/439a3563-5b97-473a-8a1c-6abdfd583928_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="M7LyHztFPVx3mS/H31RyS4AIn/iZaP1E0LKH5JBhBo8="></script>
+    nonce="8Tcbts5Lt5YTIFVOR8S86SPSIKIeQsHQTHAyKhnYBvM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -383,9 +383,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
